--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 
 {
-   "name": "Purify",
+   "name": "Clean Reader",
 
-   "description": "Read news articles with minimal distraction and scrolling.",
+   "description": "Read internet article with less distraction",
 
-   "version": "0.2",
+   "version": "0.1",
 
    "manifest_version": 2,
 
    "commands" : {
-     "activate_purify" : {
+     "activate_cleaner" : {
        "suggested_key" : {
          "default" : "Ctrl+Shift+P",
          "mac" : "MacCtrl+Shift+P"
        },
-       "description" : "Active purify reader"
+       "description" : "Active clean reader"
      }
    },
 
@@ -57,7 +57,7 @@
 
    "browser_action" :
    {
-      "default_title" : "Purify",
+      "default_title" : "Clean Reader",
       "default_icon" :
       {
          "19" : "img/icon19.png"
